friends: style: fix overflow

--- a/css/friends.css
+++ b/css/friends.css
@@ -7,6 +7,7 @@
     display: flex;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .07), 0 1px 5px 0 rgba(0, 0, 0, .1);
     margin: 10px 20px 10px 0px;
+    max-width: min(90vw, 850px);
     transition: all .3s;
     img {
         height: 100px;
